RESOLVED FIXED114497
[BlackBerry] Crash running layout tests when WebPage is destroyed
https://bugs.webkit.org/show_bug.cgi?id=114497
Summary [BlackBerry] Crash running layout tests when WebPage is destroyed
Carlos Garcia Campos
Reported 2013-04-12 00:43:29 PDT
PR 324649
Attachments
Patch (3.67 KB, patch)
2013-04-12 00:48 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2013-04-12 00:48:12 PDT
Xan Lopez
Comment 2 2013-04-12 01:28:34 PDT
Comment on attachment 197727 [details] Patch OK.
WebKit Commit Bot
Comment 3 2013-04-12 02:01:46 PDT
Comment on attachment 197727 [details] Patch Clearing flags on attachment: 197727 Committed r148270: <http://trac.webkit.org/changeset/148270>
WebKit Commit Bot
Comment 4 2013-04-12 02:01:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.